--- a/MagicMirror.UniversalApp/MainPage.xaml
+++ b/MagicMirror.UniversalApp/MainPage.xaml
@@ -2,54 +2,67 @@
     x:Class="MagicMirror.UniversalApp.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MagicMirror.UniversalApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:MagicMirror="using:MagicMirror.UniversalApp.ViewModels"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" RequestedTheme="Dark">
 
     <Page.DataContext>
-        <MagicMirror:MainViewModel/>
+        <MagicMirror:MainViewModel />
     </Page.DataContext>
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="3*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <!--Top Row-->
-            <!--Top Left-->
+        <!--Top Left-->
         <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Temperature}" Style="{StaticResource HeaderTextBlockStyle}"/>
-                <TextBlock Text="{Binding TemperatureUom}" Style="{StaticResource HeaderTextBlockStyle}" Margin="10,0,0,0"/>
+                <TextBlock Text="{Binding Temperature}" Style="{StaticResource HeaderTextBlockStyle}" />
+                <TextBlock Text="°" Style="{StaticResource HeaderTextBlockStyle}" />
+                <Image Source="{Binding WeatherIcon}" Width="48" Margin="10,10,10,0" />
             </StackPanel>
-            <TextBlock Text="{Binding Weather}" Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left"/>
+            <TextBlock Text="{Binding Weather}" Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" />
             <TextBlock Text="{Binding Location}" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Left" />
+
+            <!--Sunrise & Sunset-->
+            <StackPanel Padding="0,20">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Assets/Weather/Dark/sunrise.png" Width="36" />
+                    <TextBlock Text="{Binding Sunrise}" Margin="10,0,0,0" Style="{StaticResource SubtitleTextBlockStyle}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Assets/Weather/Dark/sunset.png" Width="36" />
+                    <TextBlock Text="{Binding Sunset}"  Margin="10,0,0,0" Style="{StaticResource SubtitleTextBlockStyle}" />
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
 
-            <!--Top Right-->
+        <!--Top Right-->
         <StackPanel Grid.Row="0" Grid.Column="2">
-            <TextBlock Text="{Binding Time}" HorizontalAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}"/>
-            <TextBlock Text="{Binding Date}" TextWrapping="WrapWholeWords" Style="{ThemeResource TitleTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding Time}" HorizontalAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}" />
+            <TextBlock Text="{Binding Date}" TextWrapping="WrapWholeWords" Style="{ThemeResource TitleTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </StackPanel>
 
         <!--Center-->
         <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Compliment}" TextAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWholeWords" MaxLines="0" />
 
         <!--Bottom row-->
-        <StackPanel Grid.Row="2" Grid.Column="0">
-            <TextBlock Text="Travel time" Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding TravelTime}" Style="{StaticResource SubheaderTextBlockStyle}" TextAlignment ="Center"  TextWrapping="WrapWholeWords" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/Assets/Other/Dark/car.png" Width="48" Margin="10,10,10,0" />
+                <TextBlock Text="Travel time" Style="{StaticResource TitleTextBlockStyle}" />
+            </StackPanel>
+            <TextBlock Text="{Binding TravelTime}" Style="{StaticResource TitleTextBlockStyle}" TextAlignment ="Center" TextWrapping="WrapWholeWords"/>
         </StackPanel>
-
     </Grid>
-
 </Page>
