--- a/MagicMirror.UniversalApp/MainPage.xaml
+++ b/MagicMirror.UniversalApp/MainPage.xaml
@@ -3,15 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:MagicMirror="using:MagicMirror.UniversalApp.ViewModels"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    xmlns:vm="using:MagicMirror.UniversalApp.ViewModels"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" RequestedTheme="Dark">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
+    RequestedTheme="Dark">
 
-    <Page.DataContext>
-        <vm:MainViewModel/>
-    </Page.DataContext>
-    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,50 +20,126 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
+        <Grid.Resources>
+            <Style x:Key="UpcomingDayText" TargetType="TextBlock">
+                <Setter Property="Margin" Value="20,7,10,0"></Setter>
+            </Style>
+
+            <Style x:Key="UpcomingDayTextLeft" BasedOn="{StaticResource UpcomingDayText}" TargetType="TextBlock">
+                <Setter Property="Width" Value="40"></Setter>
+            </Style>
+
+            <DataTemplate x:Key="UpcomingDaysTemplate">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Day}" Style="{StaticResource UpcomingDayTextLeft}"  />
+                    <Image Source="/Assets/Weather/Dark/sunrise.png" Width="36" />
+                    <TextBlock Text="{Binding MinTemp}" Style="{StaticResource UpcomingDayText}"/>
+                    <TextBlock Text="{Binding MaxTemp}" Style="{StaticResource UpcomingDayText}"/>
+                </StackPanel>
+            </DataTemplate>
+
+        </Grid.Resources>
+
         <!--Top Row-->
         <!--Top Left-->
-        <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">
+        <StackPanel x:Name="TopLeft" Grid.Row="0" Grid.Column="0"
+                    Margin="20,0,0,0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding OnlineDataModel.Temperature}" Style="{StaticResource HeaderTextBlockStyle}" />
-                <TextBlock Text="°" Style="{StaticResource HeaderTextBlockStyle}" />
-                <Image Source="{Binding WeatherIcon}" Width="48" Margin="10,10,10,0" />
+                <TextBlock Text="{Binding OnlineDataModel.Temperature, FallbackValue='63'}" 
+                           Style="{StaticResource HeaderTextBlockStyle}" />
+                <TextBlock Text="°" 
+                           Style="{StaticResource HeaderTextBlockStyle}" />
+                <Image Source="{Binding WeatherIcon}" 
+                       Width="48" 
+                       Margin="10,10,10,0" />
             </StackPanel>
-            <TextBlock Text="{Binding OnlineDataModel.Weather}" Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" />
-            <TextBlock Text="{Binding OnlineDataModel.Location}" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Left" />
+
+            <TextBlock Text="{Binding OnlineDataModel.Weather, FallbackValue='Clear Sky'}" 
+                       Style="{StaticResource SubheaderTextBlockStyle}" 
+                       HorizontalAlignment="Left" />
+
+            <TextBlock Text="{Binding OnlineDataModel.Location, FallbackValue='San Francisco'}" 
+                       Style="{StaticResource TitleTextBlockStyle}" 
+                       HorizontalAlignment="Left" />
 
             <!--Sunrise & Sunset-->
             <StackPanel Padding="0,20">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/Assets/Weather/Dark/sunrise.png" Width="36" />
-                    <TextBlock Text="{Binding OnlineDataModel.Sunrise}" Margin="10,0,0,0" Style="{StaticResource SubtitleTextBlockStyle}" />
+                    <Image Source="/Assets/Weather/Dark/sunrise.png" 
+                           Width="36" />
+
+                    <TextBlock Text="{Binding OnlineDataModel.Sunrise, FallbackValue='07:01'}" 
+                               Margin="10,0,0,0" 
+                               Style="{StaticResource SubtitleTextBlockStyle}" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/Assets/Weather/Dark/sunset.png" Width="36" />
-                    <TextBlock Text="{Binding OnlineDataModel.Sunset}"  Margin="10,0,0,0" Style="{StaticResource SubtitleTextBlockStyle}" />
+                    <TextBlock Text="{Binding OnlineDataModel.Sunset, FallbackValue='18:36'}"  
+                               Margin="10,0,0,0" 
+                               Style="{StaticResource SubtitleTextBlockStyle}" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
 
         <!--Top Right-->
-        <StackPanel Grid.Row="0" Grid.Column="2">
-            <!--<TextBlock Text="{x:Bind vm:MainViewModel.Time, FallbackValue=FOO}" HorizontalAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}" />-->
-            <TextBlock Text="{Binding Date}" TextWrapping="WrapWholeWords" Style="{ThemeResource TitleTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <StackPanel x:Name="TopRight" Grid.Row="0" Grid.Column="2">
+            <TextBlock Text="{Binding Time, FallbackValue='09:15'}" 
+                       HorizontalAlignment="Center" 
+                       Style="{StaticResource HeaderTextBlockStyle}" />
+
+            <TextBlock Text="{Binding Date, FallbackValue='13/02/2024'}" 
+                       TextWrapping="WrapWholeWords" Style="{ThemeResource TitleTextBlockStyle}"
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" />
         </StackPanel>
 
         <!--Center-->
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Compliment}" TextAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWholeWords" MaxLines="0" />
+        <!--Center Left-->
+        <ListView 
+            Grid.Row="1" Grid.Column="0"
+            VerticalAlignment="Stretch"
+            x:Name="UpcomingDaysList"
+            ItemTemplate="{StaticResource UpcomingDaysTemplate}"
+            IsEnabled="False">
+        </ListView>
+
+        <!--Middle-->
+        <TextBlock Grid.Row="1" Grid.Column="1" 
+                   x:Name="Compliment"
+                   Text="{Binding Compliment, FallbackValue='Hey you'}" 
+                   TextAlignment="Center" 
+                   Style="{StaticResource HeaderTextBlockStyle}" 
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" 
+                   TextWrapping="WrapWholeWords" />
 
         <!--Bottom row-->
-        <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <!--Bottom Left-->
+        <StackPanel Grid.Row="2" Grid.Column="0" 
+                    x:Name="BottomLeft">
             <StackPanel Orientation="Horizontal">
-                <Image Source="/Assets/Other/Dark/car.png" Width="48" Margin="10,10,10,0" />
-                <TextBlock x:Uid="TravelTime" Text="Travel time" Style="{StaticResource TitleTextBlockStyle}" />
+                <Image Source="/Assets/Other/Dark/car.png" 
+                       Width="48" 
+                       Margin="10,10,10,0" />
+                <TextBlock x:Uid="TravelTime" Text="Travel time" 
+                           Style="{StaticResource TitleTextBlockStyle}" />
             </StackPanel>
-            <TextBlock Text="{Binding OnlineDataModel.TravelTime}" Style="{StaticResource TitleTextBlockStyle}" TextAlignment ="Center" TextWrapping="WrapWholeWords"/>
+
+            <TextBlock Text="{Binding OnlineDataModel.TravelTime, FallbackValue='28 minutes'}" 
+                       Style="{StaticResource TitleTextBlockStyle}" 
+                       TextAlignment ="Center" 
+                       TextWrapping="WrapWholeWords"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="! Offline Data !" Style="{StaticResource TitleTextBlockStyle}" Visibility="{Binding OnlineDataModel.IsOfflineData}" Foreground="Red" />
+        <!--Bottom Center-->
+        <StackPanel x:Name="BottomRight" 
+                    Grid.Row="2" Grid.Column="1" 
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Center">
+
+            <TextBlock Text="! Offline Data !" 
+                       Style="{StaticResource TitleTextBlockStyle}" 
+                       Visibility="{Binding OnlineDataModel.IsOfflineData}" />
         </StackPanel>
     </Grid>
 </Page>
